# mi

./: Diagramme sans nom.drawio  README.md  pyproject.toml
docs/: 2_advanced_maths.html  3_probas.html  index.html
docs/maths/: 1_core_maths.html  2_advanced_maths.html  3_probas.html  4_calculus.html
docs/nn/: makemore_part1.html  makemore_part2.html  micrograd.html
docs/num_computing/: 1_np_tuto.html
mi/src/: gpt.py
mi/src_gpt/: bigram.py
mi/src_gpt2/: train_gpt2.py
notebooks/: custom.tpl
notebooks/1_maths/: 1_core_maths.ipynb  2_advanced_maths.ipynb  3_probas.ipynb  4_calculus.ipynb
notebooks/2_numpy/: 1_np_tuto.ipynb
notebooks/3_nn/: makemore_part1.ipynb  makemore_part2.ipynb  makemore_part3.ipynb  micrograd.ipynb
notebooks/4_gpt/: gpt_dev.ipynb
notebooks/4_gpt_one/: gpt.ipynb
notebooks/5_tokenizer/: tokenization.ipynb
notebooks/6_gpt2/: play.ipynb
