[project]
name = "mechanistic_interpretability"
version = "0.1.0"
description = "A full guide to learning mechanistic interpretability"
authors = [
    {name = "Robin Ghyselinck", email = "rghyselinck@gmail.com"},
]
dependencies = [
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "torchvision>=0.20.1"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mi"]